--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ check_untyped_defs = true
 dev = [
     "black>=24.8.0",
     "mypy>=1.14.1",
+    "pre-commit>=3.5.0",
     "pytest>=8.3.4",
     "pytest-cov>=5.0.0",
     "ruff>=0.9.4",
