--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           uv pip install --system
           uv sync
-          uv add --dev black ruff pytest pytest-cov mypy types-PyYAML pre-commit
+          uv add --dev black ruff mypy pre-commit
 
       - name: Run Black formatter check
         run: uv run black . --check
@@ -34,14 +34,4 @@ jobs:
         run: uv run ruff check .
 
       - name: Run type checking
-        run: uv run mypy .
-
-      - name: Run tests with coverage
-        run: uv run pytest tests/ --cov=./ --cov-report=xml
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          fail_ci_if_error: true 
+        run: uv run mypy . 
